--- a/snapcrack/package.json
+++ b/snapcrack/package.json
@@ -57,7 +57,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.8.0",
     "zod": "^3.22.4",
-    "cloudinary": "^2.0.1"
+    "cloudinary": "^2.0.1",
+    "qrcode.react": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
