--- a/snapcrack/tsconfig.json
+++ b/snapcrack/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",                           
+    "paths": {
+      "@/*": ["./*"]                          
+    },
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "target": "ES6",
@@ -8,7 +12,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -17,12 +21,7 @@
       {
         "name": "next"
       }
-    ],
-    "baseUrl": ".",  
-    "paths": {
-      "@/*": ["./*"],
-      "@components/*": ["components/*"]  
-    }
+    ]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
